--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Rhiannon Rhianna Mobile Tyres - Fast, reliable mobile tyre fitting service across East London. 24/7 emergency call-outs, puncture repairs, and professional tyre replacement."
+      content="C&C Nails and Beauty - Professional nail and beauty treatments in the heart of London. From flawless nails to relaxing skincare—your beauty, our passion."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Rhiannon Rhianna Mobile Tyres - Professional Mobile Tyre Fitting</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <title>C&C Nails and Beauty - Professional Beauty Salon in London</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
